Figured out how I2S and PCM sample L/R works and their 24 bit representation Example coded with simple Low and High pass from AD site sample converted to ADSP21369 for Cross Core Embedded Studio https://ez.analog.com/dsp/blackfin-processors/bf70x/f/discussions/12899/simple-audio-in-out-code-for-the-adsp-bf706-ez-kit Uart added and dump of hex I2S block is sent to the terminal with 128000 stable speed, every 500 blocks processed. Other higher speeds are calculated but error rate is very big. Low/High pass Filter processing is not done when sending the I2S data to the terminal via RS232.

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -85,21 +85,21 @@ CPP_DEPS := $(subst \ ,@, $(CPP_DEPS))
 CPP_DEPS := $(foreach var, $(CPP_DEPS), "$(subst @, ,$(var))")
 
 # All Target
-all: Block_Based_Talkthrough.dxe
+all: adsp-21369-ezkit-audio-process-block.dxe
 
 # Tool invocations
-Block_Based_Talkthrough.dxe: $(LDF_SRCS) $(SRC_OBJS)
+adsp-21369-ezkit-audio-process-block.dxe: $(LDF_SRCS) $(SRC_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: CrossCore SHARC Linker'
-	cc21k -proc ADSP-21369 -si-revision any -TC:/Analog\ Devices/ADSP-21369_EZKIT-Rel1.0.0/21369_EZ-KIT_Lite/Examples/Block_Based_Talkthrough/system/startup_ldf/app.ldf -no-mem -LC:/Analog\ Devices/ADSP-21369_EZKIT-Rel1.0.0/21369_EZ-KIT_Lite/Examples/Block_Based_Talkthrough/Debug/system/startup_ldf -flags-link -MDDEBUG,-MDCORE0 -add-debug-libpaths -o Block_Based_Talkthrough.dxe @input-file.txt  -flags-link -od,.\.
+	cc21k -proc ADSP-21369 -si-revision any -TC:/Users/jiteshpramodray/git/adsp-21369-ezkit-audio-process-block/system/startup_ldf/app.ldf -no-mem -LC:/Users/jiteshpramodray/git/adsp-21369-ezkit-audio-process-block/Debug/system/startup_ldf -flags-link -MDDEBUG,-MDCORE0 -add-debug-libpaths -o adsp-21369-ezkit-audio-process-block.dxe @input-file.txt  -flags-link -od,.\.
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-linker_log.xml: Block_Based_Talkthrough.dxe $(LDF_SRCS) $(SRC_OBJS)
+linker_log.xml: adsp-21369-ezkit-audio-process-block.dxe $(LDF_SRCS) $(SRC_OBJS)
 
 # Other Targets
 clean:
-	-$(RM) $(DXE)$(DSP_DEPS)$(CC_DEPS)$(LINKER_LOG_OUTPUTS)$(C++_DEPS)$(OBJS)$(C_UPPER_DEPS)$(CXX_DEPS)$(ASM_DEPS)$(S_DEPS)$(C_DEPS)$(CPP_DEPS) Block_Based_Talkthrough.dxe
+	-$(RM) $(DXE)$(DSP_DEPS)$(CC_DEPS)$(LINKER_LOG_OUTPUTS)$(C++_DEPS)$(OBJS)$(C_UPPER_DEPS)$(CXX_DEPS)$(ASM_DEPS)$(S_DEPS)$(C_DEPS)$(CPP_DEPS) adsp-21369-ezkit-audio-process-block.dxe
 	-@echo ' '
 
 .PHONY: all clean dependents
